adjustment styles and container

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <meta name="author" content="lucasferreiralimax">
     <meta name="description" content="Page with list contacts hotline help for you">
     <meta name="keywords" content="HTML,CSS,JavaScript,Front,Front-end,save our soul">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- a informação salva vidas -->
-    <footer><a href="https://github.com/lucasferreiralimax" target="_blank">github@lucasferreiralimax</a></footer>
+    <footer class="footer"><a href="https://github.com/lucasferreiralimax" target="_blank">github@lucasferreiralimax</a></footer>
     <script src="heart.js"></script>
   </body>
 </html>
