--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Page with list contacts hotline help for you">
     <meta name="keywords" content="HTML,CSS,JavaScript,Front,Front-end,save our soul">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Courgette&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- a informação salva vidas -->
