break in files functions and contacts

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <body>
     <!-- a informação salva vidas -->
     <footer class="footer"><a href="https://github.com/lucasferreiralimax" target="_blank">github@lucasferreiralimax</a></footer>
+    <script src="core.js"></script>
+    <script src="contacts.js"></script>
     <script src="heart.js"></script>
   </body>
 </html>
