implementation tooltip with attr

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- a informação salva vidas -->
-    <footer class="footer"><a href="https://github.com/lucasferreiralimax" target="_blank">github@lucasferreiralimax</a></footer>    
+    <footer class="footer"><a href="https://github.com/lucasferreiralimax" target="_blank" data-tooltip="Projeto Open Source">Github</a></footer>    
     <script src="heart.js"></script>
   </body>
 </html>
