--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" onmouseleave="keepCalm()">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- a informação salva vidas -->
-    <footer class="footer"><a href="https://github.com/lucasferreiralimax" target="_blank" data-tooltip="Projeto Open Source">Github</a></footer>    
+    <footer class="footer"><a href="https://github.com/lucasferreiralimax" target="_blank" data-tooltip="Projeto Open Source">Github</a></footer>
     <script src="heart.js"></script>
   </body>
 </html>
