--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save Our Soul</title>
     <meta name="author" content="lucasferreiralimax">
-    <meta name="description" content="Page with list contacts hotline help for you">
+    <meta name="description" content="Página com lista de contatos para prevenção a vida.">
     <meta name="keywords" content="HTML,CSS,JavaScript,Front,Front-end,save our soul">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Courgette&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- a informação salva vidas -->
-    <footer class="footer"><a href="https://github.com/lucasferreiralimax" target="_blank" data-tooltip="Projeto Open Source">Github</a></footer>
+    <footer class="footer"><a href="https://github.com/lucasferreiralimax/save-our-soul" target="_blank" data-tooltip="Projeto Open Source">Código aberto no Github</a></footer>
     <script src="heart.js"></script>
   </body>
 </html>
