remove footer html insert in file js, adjustment folder js and sizeIcon svg

--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <meta name="description" content="Página com lista de contatos para prevenção a vida.">
     <meta name="keywords" content="HTML,CSS,JavaScript,Front,Front-end,save our soul">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Courgette&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Courgette&display=swap" rel="stylesheet">
+    <script src="js/core.js"></script>
+    <script src="js/contacts.js"></script>    
   </head>
   <body>
     <!-- a informação salva vidas -->
-    <footer class="footer"><a href="https://github.com/lucasferreiralimax/save-our-soul" target="_blank" data-tooltip="Projeto Open Source" rel='noopener'>Código aberto no Github</a></footer>
-    <script src="core.js"></script>
-    <script src="contacts.js"></script>
-    <script src="heart.js"></script>
+    <script src="js/heart.js"></script>
   </body>
 </html>
