--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta name="author" content="lucasferreiralimax">
     <meta name="description" content="Página com lista de contatos para prevenção a vida.">
     <meta name="keywords" content="HTML,CSS,JavaScript,Front,Front-end,save our soul">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="manifest" href="manifest.json">
+    <link rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#ffeb3b">
+    <meta name="apple-mobile-web-app-title" content="S.O.S">
+    <meta name="application-name" content="S.O.S">
+    <meta name="msapplication-TileColor" content="#333333">
+    <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Courgette&display=swap" rel="stylesheet">
     <script src="js/core.js"></script>
